# RedORB-hackathon

./: .gitignore  ARCHITECTURE.md  Dockerfile.sandbox  README.md  VERDICT_Redrob_Idea_Submission_Aligned.pptx  VERDICT_Redrob_Idea_Submission_Final.pptx  api.py  dossier.py  drift_monitor.py  explain.py  ingest.py  precompute.py  pyproject.toml  rank.py  requirements-sandbox.txt  requirements.txt  rubric_diff.py  sandbox_app.py  search.py  streamlit_app.py  submission_metadata.yaml
artifacts/: hypothetical_profiles.json  rubric_program.json
docs/: cpu-embedding-optimization-research.md
samples/: top100_candidates.json
scripts/: audit_evidence_cap.py  audit_honeypots.py  audit_quality_gates.py  audit_top.py  audit_top100.py  bench_cpu_embeddings.py  bench_embed.py  bench_embed2.py  build_probes.py  build_records_artifact.py  calibrate_predicates.py  restore_pretest.py  run_report.py  test_resume_parser.py
src/verdict/: __init__.py  availability.py  credibility.py  data.py  drift.py  embedder.py  evidence.py  explain_core.py  feel_compiler.py  fusion.py  judgment.py  normalizer.py  pipeline.py  reasoning.py  recall.py  resume_parser.py  twins.py
web/: app.js  index.html  styles.css
